--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,10 @@
 body{
     /* opacity: 0.3; */
     background-image:url('../images/background3.jpg');
+    background-size: auto;
 }
+
+
 
 #main{
     width: 100%;
